# BLAZIL

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  Procfile  README.md  RELEASE-v0.1.0.md  RELEASE-v0.5.0.md  SECURITY.md  lefthook.yml  nixpacks.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  trivy.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml  security.yml
.lefthook/pre-push/: go_vet.sh
bench/: Cargo.toml  README.md
bench/benches/: latency.rs  ring_buffer.rs  sharded_pipeline_scenario.rs  transaction_throughput.rs
bench/src/: lib.rs  main.rs  metrics.rs  report.rs  ws_server.rs
bench/src/scenarios/: aeron_scenario.rs  afxdp_e2e_scenario.rs  io_uring_udp_scenario.rs  mod.rs  pipeline_scenario.rs  ring_buffer_scenario.rs  sharded_pipeline_scenario.rs  sharded_tb_scenario.rs  tcp_scenario.rs  tigerbeetle_scenario.rs  udp_scenario.rs  vsr_failover_scenario.rs
core/: Cargo.toml
core/aeron-sys/: Cargo.toml  build.rs
core/aeron-sys/aeron/: .gitkeep
core/aeron-sys/src/: bindings.rs  lib.rs
core/common/: Cargo.toml
core/common/src/: amount.rs  currency.rs  error.rs  ids.rs  lib.rs  timestamp.rs  traits.rs
core/dataloader/: Cargo.toml
core/dataloader/src/: config.rs  error.rs  lib.rs  pipeline.rs
core/dataloader/src/datasets/: audio.rs  detection.rs  features.rs  imagenet.rs  mod.rs  synthetic.rs  text.rs  timeseries.rs
core/dataloader/src/readers/: io_uring.rs  mmap.rs  mod.rs
core/dataloader/src/transform/: mod.rs  normalize.rs
core/engine/: Cargo.toml
core/engine/src/: cross_shard.rs  event.rs  handler.rs  lib.rs  metrics.rs  pipeline.rs  result_ring.rs  ring_buffer.rs  sequence.rs  sharded_pipeline.rs  simd.rs
core/engine/src/handlers/: ledger.rs  mod.rs  publish.rs  risk.rs  validation.rs
core/inference/: Cargo.toml
core/inference/benches/: bitnet_kernels.rs  inference_throughput.rs
core/inference/src/: config.rs  error.rs  lib.rs  model.rs  onnx.rs  pipeline.rs
core/inference/src/kernels/: bitnet.rs  mod.rs
core/inference/tests/: integration_test.rs
core/ledger/: Cargo.toml
core/ledger/src/: account.rs  client.rs  convert.rs  double_entry.rs  lib.rs  metrics.rs  mock.rs  tigerbeetle.rs  transfer.rs
core/ledger/tests/: tigerbeetle_integration.rs
core/risk/: Cargo.toml
core/risk/src/: engine.rs  lib.rs  limit.rs  position.rs
core/transport/: Cargo.toml  build.rs
core/transport/ebpf/: blazil_xdp.bpf.c
core/transport/src/: aeron_transport.rs  backpressure.rs  connection.rs  io_uring_transport.rs  lib.rs  main.rs  metrics_server.rs  mock.rs  priority.rs  protocol.rs  rate_limit.rs  rdma_transport.rs  server.rs  tcp.rs  udp_transport.rs
core/transport/src/aeron/: context.rs  driver.rs  mod.rs  priority_publisher.rs  priority_subscriber.rs  publication.rs  subscription.rs  transport.rs
core/transport/src/afxdp/: client.rs  mod.rs  rx.rs  socket.rs  umem.rs
core/transport/src/ebpf/: mod.rs
core/transport/tests/: aeron_integration_test.rs  afxdp_loopback_test.rs  e2e_tigerbeetle.rs
docs/: AI_AWS_QUICKSTART.md  AI_BASELINES.md  AI_DO_QUICKSTART.md  AI_INFERENCE_AUDIT.md  AI_METRICS_AND_RECORDS.md  BENCHMARK_RESULTS_WORKFLOW.md  DATASETS_IMPLEMENTATION.md  ENTERPRISE_AUDIT_REPORT.md  LEDGER_OBSERVABILITY.md  ML_BENCH_RESILIENCE_IMPLEMENTATION.md  PHASE-3-UDP-COMPLETE.md  PITCH_DECK.md  PRIORITY_QUEUING.md  benchmark-report.md  do-benchmark-report-final.md  do-benchmark-report.md  stress-report.md
docs/adr/: 0001-use-tigerbeetle-as-ledger.md  0003-ringbuffer-claim-cursor-separation.md  0004-auth-strategy.md  0005-transport-selection.md  0006-sharding-design.md
docs/architecture/: 001-monorepo-structure.md  002-ankatos-cortex-blazil-boundary.md
docs/benchmark-screenshots/: .gitkeep
docs/compliance/: PHASE5_AUDIT_LOGGING.md  access-control-framework.md  encryption-at-rest-and-in-transit.md  enterprise-readiness-report-2026-05-10.md  mas-trm-assessment-2026-05-10.md  soc2-evidence-2026-05-10.md
docs/runbooks/: README.md  alert-runbook.md  backup-restore.md  blue-green-deployment.md  dashboard-guide.md  (+10 more)
libs/audit/: Cargo.toml
libs/audit/src/: entry.rs  event.rs  export.rs  lib.rs  store.rs  tests.rs
libs/mas_trm/: Cargo.toml
libs/mas_trm/src/: bcp.rs  error.rs  lib.rs  region.rs  residency.rs  retention.rs  risk.rs  tests.rs
libs/screening/: Cargo.toml
libs/screening/src/: batch.rs  error.rs  hold.rs  lib.rs  mock.rs  realtime.rs  sar.rs  screener.rs  tests.rs  types.rs
libs/screening/src/providers/: chainalysis.rs  elliptic.rs  mod.rs  sardine.rs
scripts/: aeron-bench.sh  ai-aws-setup.sh  ai-benchmark.sh  ai-do-setup.sh  bench-isolate.sh  bench.sh  check.sh  clarkenai-70b-bench.sh  clarkenai-aws-setup.sh  clarkenai-cloud-bench.sh  clarkenai-hmq-sweep.sh  cluster.sh  collect-evidence.sh  commit-bench-results.sh  demo.sh  deploy-dedicated.sh  do-benchmark.sh  do-setup.sh  do-start.sh  do-tune.sh  gen-ai-report.sh  gen-dataset.sh  get-clarkenai-70b-model.sh  io-uring-bench.sh  setup.sh  shard-bench.sh  stress.sh  v0.4_aws_setup.sh  v0.4_i4i16xl_bench.sh  v0.4_i4i4xl_bench.sh  v0.4_nvme_oneshot.sh  v0.4_vsr_bench.sh
services/: go.work  go.work.sum
services/inference/: Cargo.toml  README.md  config.example.toml  inference-baseline-test.toml  inference-chat-70b-edge-ready.toml  inference-chat-70b-ready.toml  inference-chat-7b-test.toml  inference-hybrid-test.toml  inference-local.toml  inference-orchesity-ready.toml  inference-stage2.toml  inference-stage3.toml
services/inference/src/: aeron_server.rs  config.rs  gguf_model.rs  http_api.rs  lib.rs  main.rs  metrics.rs  model_registry.rs  protocol.rs  server.rs
services/inference/src/models/: avx512_kernels.rs  mod.rs  quantized_qwen2.rs
tools/: DASHBOARD_SEPARATION_COMPLETE.md
tools/ml-bench/: Cargo.toml
tools/ml-bench/src/: health.rs  main.rs  ws_server.rs
tools/test-inference/: Cargo.toml
tools/test-inference/src/: main.rs
(+772 files in other folders)
