[workspace]
resolver = "2"
members = [
    "core/engine",
    "core/transport",
    "core/ledger",
    "core/risk",
    "core/common",
    "core/aeron-sys",
    "core/dataloader",
    "bench",
    "tools/ml-bench",
]

[workspace.package]
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/Kolerr-Lab/BLAZIL"
# Enforces MSRV locally — cargo check/test will reject any stdlib API
# or dependency that requires a newer compiler than this.
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"           # Full LTO across all crates
codegen-units = 1     # Single codegen unit for maximum optimization
strip = false         # Keep symbols for profiling
debug = false
