[package]
name = "blazil-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "blazil_bench"
path = "src/lib.rs"

[[bin]]
name = "blazil-bench"
path = "src/main.rs"

[features]
tigerbeetle-client = ["blazil-ledger/tigerbeetle-client"]
aeron = ["blazil-transport/aeron"]
io-uring = ["blazil-transport/io-uring"]
# Embed a WebSocket metrics server in the bench binary for live dashboard.
metrics-ws = ["axum", "tower-http"]

[dependencies]
blazil-common    = { path = "../core/common" }
blazil-engine    = { path = "../core/engine" }
blazil-ledger    = { path = "../core/ledger" }
blazil-transport = { path = "../core/transport" }
async-trait      = "0.1"
core_affinity    = "0.8"
dashmap          = "6.1"
rmp-serde        = "1"
serde_json       = "1"
tokio            = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal     = "1"
axum             = { version = "0.8", features = ["ws"], optional = true }
tower-http       = { version = "0.6", features = ["cors"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "ring_buffer"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "sharded_pipeline_scenario"
harness = false
