[package]
name = "blazil-aeron-sys"
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/Kolerr-Lab/BLAZIL"
description = "Raw FFI bindings to the Aeron C Media Driver (real-logic/aeron)"
links = "aeron_static"
build = "build.rs"

[features]
# Re-generate bindings from the C headers in the aeron/ submodule.
# Requires: aeron submodule initialised + bindgen + cmake.
# Usage: cargo build --features regenerate-bindings -p blazil-aeron-sys
regenerate-bindings = ["dep:bindgen"]

[dependencies]

[build-dependencies]
bindgen = { version = "0.70", optional = true }
