[package]
name = "blazil-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
bytes = { workspace = true }
rust_decimal = { version = "1", features = ["serde"] }
iso_currency = "0.4"

[dev-dependencies]
serde_json = "1"
