[package]
name = "blazil-common"
version = "0.5.2"
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/Kolerr-Lab/BLAZIL"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
bytes = "1"
rust_decimal = { version = "1", features = ["serde"] }
iso_currency = "0.4"

[dev-dependencies]
serde_json = "1"
