[package]
name = "blazil-inference"
version = "0.1.0"
edition = "2021"
authors = ["Blazil Team <lab.kolerr@kolerr.com>"]
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Blazil core
blazil-common = { path = "../common" }
blazil-dataloader = { path = "../dataloader" }

# Inference engine - tract (pure Rust, production-stable)
tract-onnx = "0.21"
tract-core = "0.21"

# Tensor operations
ndarray = "0.16"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Error handling & logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
criterion = "0.5"
ureq = "2.10"

[features]
default = ["cpu"]
# CPU-only execution (pure Rust, no system dependencies)
cpu = []
# CUDA execution via tract-gpu (experimental, requires CUDA toolkit)
cuda = []
# Note: TensorRT not yet supported by tract, placeholder for future
tensorrt = []

[[bench]]
name = "inference_throughput"
harness = false
