[package]
name = "blazil-inference"
version = "0.5.2"
edition = "2021"
authors = ["Blazil Team <lab.kolerr@kolerr.com>"]
license.workspace = true
repository.workspace = true
rust-version = "1.88"

[dependencies]
# Blazil core
blazil-common = { path = "../common" }
blazil-dataloader = { path = "../dataloader" }

# Inference engine - tract (pure Rust, production-stable)
# 0.22.1: replaced paste (archived, RUSTSEC-2024-0436) with pastey (maintained fork)
tract-onnx = "0.22"
tract-core = "0.22"

# Tensor operations
ndarray = "0.16"

# Thread-pool control — Tract 0.22 uses Rayon for intra-op parallelism.
# Explicit dep lets us call ThreadPoolBuilder::build_global() to pre-size
# the pool before the first model load.
rayon = "1.10"

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Error handling & logging
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
proptest = "1.4"
criterion = "0.5"
ureq = "2.10"

[features]
default = ["cpu"]
# CPU-only execution (pure Rust, no system dependencies)
cpu = []
# CUDA execution via tract-gpu (experimental, requires CUDA toolkit)
cuda = []
# Note: TensorRT not yet supported by tract, placeholder for future
tensorrt = []

[[bench]]
name = "inference_throughput"
harness = false

[[bench]]
name = "bitnet_kernels"
harness = false
