[package]
name = "blazil-risk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { version = "1", features = ["serde"] }
dashmap = "6.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
