[package]
name = "blazil-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enables the real TigerBeetle ledger client.
# Required by Dockerfile.engine; unit tests use the default in-memory client.
tigerbeetle-client = ["blazil-ledger/tigerbeetle-client"]

# Enables the Aeron UDP transport backend.
# Auto-spawns aeronmd as subprocess if found in PATH, or connects to external driver.
# Activate at runtime via BLAZIL_TRANSPORT=aeron or BLAZIL_TRANSPORT=aeron+io-uring.
aeron = ["dep:aeron-rs"]

# Enables the io_uring TCP transport backend (Linux 5.1+ only).
# Falls back to TcpTransportServer on macOS/non-Linux automatically.
# Activate at runtime via BLAZIL_TRANSPORT=io-uring or BLAZIL_TRANSPORT=aeron+io-uring.
io-uring = ["dep:tokio-uring"]

[dependencies]
blazil-common  = { path = "../common" }
blazil-engine  = { path = "../engine" }
blazil-ledger  = { path = "../ledger" }
tokio          = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror      = { workspace = true }
async-trait    = "0.1"
axum           = "0.7"
rmp-serde      = "1"
rust_decimal   = { version = "1", features = ["serde"] }
aeron-rs       = { version = "0.1", optional = true }
core_affinity  = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring    = { version = "0.4", optional = true }

[dev-dependencies]
blazil-ledger  = { path = "../ledger", features = ["tigerbeetle-client"] }
tower          = { version = "0.5", features = ["util"] }
