[package]
name = "blazil-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Enables the real TigerBeetle ledger client.
# Required by Dockerfile.engine; unit tests use the default in-memory client.
tigerbeetle-client = ["blazil-ledger/tigerbeetle-client"]

# Enables the Aeron UDP transport backend (embedded C Media Driver via FFI).
# Requires: git submodule update --init --recursive  (for the C library build)
# cargo check --features aeron succeeds without the submodule (pre-generated bindings).
# Activate at runtime via BLAZIL_TRANSPORT=aeron.
aeron = ["dep:blazil-aeron-sys"]

# Enables the io_uring TCP transport backend (Linux 5.1+ only).
# Falls back to TcpTransportServer on macOS/non-Linux automatically.
# Activate at runtime via BLAZIL_TRANSPORT=io-uring or BLAZIL_TRANSPORT=aeron+io-uring.
io-uring = ["dep:tokio-uring"]

[dependencies]
blazil-common  = { path = "../common" }
blazil-engine  = { path = "../engine" }
blazil-ledger  = { path = "../ledger" }
tokio          = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap        = "6.1"
thiserror      = { workspace = true }
async-trait    = "0.1"
axum           = "0.7"
rmp-serde      = "1"
rust_decimal   = { version = "1", features = ["serde"] }
blazil-aeron-sys = { path = "../../core/aeron-sys", optional = true }
core_affinity  = "0.8"
bytemuck       = { version = "1.20", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring    = { version = "0.5", optional = true }

[dev-dependencies]
blazil-ledger  = { path = "../ledger", features = ["tigerbeetle-client"] }
tower          = { version = "0.5", features = ["util"] }
