[package]
name = "blazil-screening"
version = "0.3.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
# HTTP client for live provider integrations (rustls only — no native-tls).
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# HMAC-SHA256 request signing (Elliptic x-access-sign scheme).
hmac = "0.12"
sha2 = "0.10"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "time"] }
