[package]
name = "blazil-inference-service"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "inference-server"
path = "src/main.rs"

[dependencies]
# Blazil core
blazil-inference = { path = "../../core/inference" }
blazil-dataloader = { path = "../../core/dataloader" }
blazil-transport = { path = "../../core/transport", features = ["aeron"] }
blazil-common = { path = "../../core/common" }

# Aeron IPC transport
blazil-aeron-sys = { path = "../../core/aeron-sys" }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
async-trait = "0.1"

# Serialization (MessagePack for Aeron protocol)
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# Metrics
prometheus = { version = "0.13", features = ["process"] }
warp = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utils
num_cpus = "1.16"
