[package]
name = "ml-bench"
version = "0.1.0"
edition = "2021"
authors = ["Blazil Team <lab.kolerr@kolerr.com>"]
license = "BSL-1.1"
description = "Blazil Dataloader benchmark — measures dataset throughput and GPU-readiness latency"
repository = "https://github.com/Kolerr-Lab/BLAZIL"

[[bin]]
name = "ml-bench"
path = "src/main.rs"

[features]
default = ["metrics-ws"]
# Embed a WebSocket metrics server for live dashboard
metrics-ws = ["axum", "tower-http", "serde", "serde_json"]

[dependencies]
blazil-dataloader = { path = "../../core/dataloader" }
blazil-inference = { path = "../../core/inference" }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebSocket metrics server (optional, enabled with metrics-ws feature)
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
